tests/NormalTests/paczka1/small_fuzzy/60649603.err
Error in line 4: 7Dqe4FrbU A360 56,8
Error in line 2: PcWJx9 A360 25,9
Error in line 3: NxAeHJ S572 80,8
